# Dash-2.0

./: GeometryDash 2.0.sln  GeometryDash 2.0.vcxproj  GeometryDash 2.0.vcxproj.filters  README.md  main.cpp
NeuralDash/: CMakeLists.txt  Manage.py  NeuralDash.py  NeuralDash.pyproj  setup.py
NeuralDash/src/: binder.cpp
assets/: dash.csv
hdr/: gameEngine.hpp  resources.hpp
hdr/graphic/: map.hpp  render.hpp  window.hpp
hdr/logic/: NeuralNet.hpp  collisions.hpp  objects.hpp  player.hpp
src/: gameEngine.cpp  test.cpp
src/graphics/: map.cpp  window.cpp
src/logic/: NeuralNet.cpp  collisions.cpp  objects.cpp  player.cpp
